--- a/content/docs/local-development.mdx
+++ b/content/docs/local-development.mdx
@@ -15,7 +15,7 @@ Cette commande regroupe les commandes suivantes :
 
 - `php artisan serve` : Démarre le serveur de développement Laravel.
 - `php artisan queue:listen` : Démarre le gestionnaire de file d'attente pour les tâches en arrière-plan.
-- `npm run dev` : Compile les assets front-end avec Vite.
+- `pnpm run dev` : Compile les assets front-end avec Vite.
 - `stripe listen --forward-to http://localhost:8000/stripe/webhook` : Écoute les événements Stripe et les redirige vers l'API de Swell.
 
 Pour personnaliser la commande, vous pouvez modifier le script `dev` dans le fichier `composer.json` :
@@ -25,7 +25,7 @@ Pour personnaliser la commande, vous pouvez modifier le script `dev` dans le fic
     "scripts": {
         "dev": [
             "Composer\\Config::disableProcessTimeout",
-            "npx concurrently -c \"#93c5fd,#c4b5fd,#fdba74,#86efac\" \"php artisan serve\" \"php artisan queue:listen\" \"npm run dev\" \"stripe listen --forward-to http://localhost:8000/stripe/webhook\" --names='server,queue,vite,stripe'"
+            "npx concurrently -c \"#93c5fd,#c4b5fd,#fdba74,#86efac\" \"php artisan serve\" \"php artisan queue:listen\" \"pnpm run dev\" \"stripe listen --forward-to http://localhost:8000/stripe/webhook\" --names='server,queue,vite,stripe'"
         ]
     }
 }
